Fix group remove/rename command outputs. Improve group layers query command output.